[project]
name = "com"
version = "0.0.7"
authors = [
  { name="eduardo", email="eduardo@gmail.com" },
]
description = "A module for BCA Banking."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/catdogman/banking_package"